public/stylesheets/index.css
h1 {
    color: #555555;
}

#header {
    display: grid;
    grid-template-columns: auto auto auto auto;
    grid-auto-flow: row;
    font-family: "Lato", "Helvetica Neue", "Helvetica", sans-serif;
    background-color: #F4F1EA;
    height: 100px;
    box-shadow: 0px 1px 2px rgba(0,0,0,0.15);
}

img{
    width: 190px;
    height: 100px;
    grid-column: 1/4;
    grid-row: 1;
}

#buttons {
    display: flex;
    justify-content: center;
    align-items: center;
    grid-column: 4/4;
    grid-row: 1;
    padding-top: 7px;
    padding-bottom: 7px;
    padding-left: 9px;
    padding-right: 9px;
    margin-left: 4px;
    margin-right: 4px;
}


#nav-buttons {
    grid-column: 2/4;
    grid-row: 1;
    font-family: "Lato", "Helvetica Neue", "Helvetica", sans-serif;
    display: flex;
    align-items: center;
}

#nav-buttons a {
    color: #382110;
    padding-left: 15px;
    padding-right: 15px;
    padding-top: 15px;
    padding-bottom: 15px;
    margin-right: 15px;
    letter-spacing: .09em;
    border-radius: 2px;
    text-decoration: none;
}

#nav-buttons a:hover {
    color: #ffffff;
    background-color: #382110;
    text-decoration: none;
}

#searchBar {
    display: flex;
    grid-column: 3/4;
    grid-row: 1;
    justify-content: right;
    align-items: center;
}

#searchBar input {
    height: 40px;
    width: auto;
    display: flex;
    align-items: center;
}

#buttons a {
    color: #382110;
    padding-left: 15px;
    padding-right: 15px;
    margin-left: 15px;
    margin-right: 15px;
    padding-top: 15px;
    padding-bottom: 15px;
    letter-spacing: .09em;
    border-radius: 2px;
    text-decoration: none;
}

#buttons a:hover {
    color: #ffffff;
    background-color: #382110;
    text-decoration: none;
}

